--- a/public/css/media.css
+++ b/public/css/media.css
@@ -11,10 +11,13 @@
     position: relative;
     max-height: 500px;
     padding: 1rem;
-    border: 1px solid;
     border-radius: 1rem;
     box-shadow: 5px 5px 15px 4px rgba(0, 0, 0, 0.14);
     overflow: auto;
+  }
+
+  .wrapper::-webkit-scrollbar {
+    display: none;
   }
 
   .forecast {
